# awesome-cosmonic

./: .gitignore  README.md
.github/workflows/: build-hello-world.yml  build-http-file-server.yml  build-kvcounter.yml  build-multichannelchat.yml  build-xkcdgenerator.yml  release-hello-world.yml  release-http-file-server.yml  release-kvcounter.yml  release-multichannelchat.yml  release-xkcdgnerator.yml
bank-account/: README.md  bank-account.wadm.yaml
hello-world/: Makefile  README.md  hello-cosmonic.wadm  hello-cosmonic.wadm.yaml  hello-stargate.wadm  hello-stargate.wadm.yaml
hello-world/rust/: Cargo.toml  README.md  project-generate.toml  wasmcloud.toml
hello-world/rust/.github/workflows/: build.yml  release.yml
hello-world/rust/src/: lib.rs
http-file-server/: README.md  http-file-server.wadm.yaml
kvcounter/: Makefile  README.md  kvcounter.wadm.yaml
kvcounter/rust/: Cargo.toml  README.md  build.rs  project-generate.toml  wadm.yaml  wasmcloud.toml
kvcounter/rust/.github/workflows/: release.yml
kvcounter/rust/src/: lib.rs
kvcounter/rust/ui/: package-lock.json  tailwind.config.js
kvcounter/rust/ui/public/: index.html
kvcounter/rust/ui/src/components/: App.tsx
multi-channel-chat/: README.md  multi-channel-chat.wadm.yaml
multi-channel-chat/api-gateway/: Cargo.toml  README.md  codegen.toml  wasmcloud.toml
multi-channel-chat/api-gateway/src/: chatlog.rs  lib.rs  outbound.rs
multi-channel-chat/apigateway/src/: lib.rs
multi-channel-chat/chatlog/: Cargo.toml  README.md  codegen.toml  wasmcloud.toml
multi-channel-chat/chatlog/src/: lib.rs  store.rs
multi-channel-chat/http-channel/: Cargo.toml  README.md  wasmcloud.toml
multi-channel-chat/http-channel/src/: lib.rs
multi-channel-chat/httpchannel/src/: lib.rs
multi-channel-chat/interface/: chatlog.smithy  outbound.smithy
multi-channel-chat/nats-channel/: Cargo.toml  README.md  wasmcloud.toml
multi-channel-chat/nats-channel/src/: chatlog.rs  lib.rs  outbound.rs
multi-channel-chat/natschannel/: codegen.toml
xkcdgenerator/: Cargo.toml  Makefile  README.md  project-generate.toml  wasmcloud.toml  xkcd-generator-cosmonic.wadm  xkcd-generator-cosmonic.wadm.yaml  xkcd-generator-stargate.wadm  xkcd-generator-stargate.wadm.yaml
xkcdgenerator/.github/workflows/: release.yml
xkcdgenerator/src/: lib.rs
xkcdgenerator/ui/public/: index.html
xkcdgenerator/ui/src/: App.js  index.js
