[package]
name = "xkcdgenerator"
version = "0.1.0"
authors = [ "Cosmonic Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "xkcdgenerator"

[dependencies]
futures = "0.3"
serde = "1.0.145"
serde_json = "1.0.85"
wasmbus-rpc = "0.14"
wasmcloud-interface-httpserver = "0.11"
wasmcloud-interface-numbergen = "0.10"
wasmcloud-interface-httpclient = "0.10"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
