[package]
name = "{{project-name}}"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "{{to_snake_case project-name}}"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = { version = "0.8.1", git = "https://github.com/wasmcloud/interfaces", branch = "feat/simple-http-response" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
