[package]
name = "kvcounter"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "kvcounter"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde_json ="1.0"
serde = {version = "1.0", features = ["derive"]}
rust-embed = "6.3.0"

wasmbus-rpc = "0.14"
wasmcloud-interface-keyvalue = "0.11"
wasmcloud-interface-httpserver = "0.11"
wasmcloud-interface-logging= "0.9"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
