[package]
name = "apigateway"
version = "0.1.0"
authors = [ "Cosmonic Team" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "apigateway"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
wasmbus-rpc = "0.10"
wasmcloud-interface-keyvalue = "0.8.0"
wasmcloud-interface-logging = "0.7.1"

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.5.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
